--- a/src/styles/fatex.scss
+++ b/src/styles/fatex.scss
@@ -8,6 +8,8 @@
 
 @import "components/**/*.scss";
 
+@import "utils/disabled";
+@import "utils/effects";
 @import "utils/padding";
 @import "utils/position";
 @import "utils/sizing";
