--- a/system/templates/actor/parts/tabs/stunts.hbs
+++ b/system/templates/actor/parts/tabs/stunts.hbs
@@ -3,7 +3,7 @@
         <h2>{{localize "FAx.Sheet.Stunts"}}</h2>
 
         <div class="fatex-actions fatex-actions--section-heading">
-            <span class="fatex-eb-stunt-add fatex-actions__icon fatex-actions__icon--add"></span>
+            <span class="fatex-eb-stunt-add fatex-actions__icon fa fa-plus"></span>
         </div>
     </header>
 
@@ -14,10 +14,10 @@
                     <h3 class="fatex-headline__text">{{stunt.name}}</h3>
 
                     <div class="fatex-actions fatex-actions--headline">
-                        <span class="fatex-eb-item-sort fatex-actions__icon fatex-actions__icon--drag"></span>
-                        <span class="fatex-eb-stunt-settings fatex-actions__icon fatex-actions__icon--settings" data-item="{{stunt._id}}"></span>
-                        <span class="fatex-eb-stunt-delete fatex-actions__icon fatex-actions__icon--delete" data-item="{{stunt._id}}"></span>
-                        <span class="fatex-eb-item-collapse fatex-actions__icon fatex-actions__icon--collapse{{#if stunt.data.collapsed}} fatex-actions__icon--expand{{/if}}" data-item="{{stunt._id}}"></span>
+                        <span class="fatex-eb-item-sort fatex-actions__icon fatex-actions__icon--move fa fa-sort"></span>
+                        <span class="fatex-eb-stunt-settings fatex-actions__icon fa fa-cog" data-item="{{stunt._id}}"></span>
+                        <span class="fatex-eb-stunt-delete fatex-actions__icon fatex-u-delete fa fa-trash" data-item="{{stunt._id}}"></span>
+                        <span class="fatex-eb-item-collapse fatex-actions__icon fatex-actions__icon--no-hide fa fa-chevron-up{{#if stunt.data.collapsed}} fatex-actions__icon--reverse{{/if}}" data-item="{{stunt._id}}"></span>
                     </div>
                 </header>
 
