--- a/system/templates/actor/parts/tabs/skills.hbs
+++ b/system/templates/actor/parts/tabs/skills.hbs
@@ -3,8 +3,8 @@
         <h2>{{localize "FAx.Sheet.Skills"}}</h2>
 
         <div class="fatex-actions fatex-actions--section-heading">
-            <span class="fatex-eb-skill-sortrank fatex-actions__icon fatex-actions__icon--sort"></span>
-            <span class="fatex-eb-skill-add fatex-actions__icon fatex-actions__icon--add"></span>
+            <i class="fatex-eb-skill-sortrank fatex-actions__icon fatex-actions__icon--move fa fa-sort-amount-down"></i>
+            <span class="fatex-eb-skill-add fatex-actions__icon fa fa-plus"></span>
         </div>
     </header>
 
@@ -39,9 +39,9 @@
                     </div>
 
                     <div class="fatex-actions fatex-actions--skill">
-                        <span class="fatex-eb-item-sort fatex-actions__icon fatex-actions__icon--drag"></span>
-                        <span class="fatex-eb-skill-settings fatex-actions__icon fatex-actions__icon--settings" data-item="{{skill._id}}"></span>
-                        <span class="fatex-eb-skill-delete fatex-actions__icon fatex-actions__icon--delete" data-item="{{skill._id}}"></span>
+                        <span class="fatex-eb-item-sort fatex-actions__icon fatex-actions__icon--move fa fa-sort"></span>
+                        <span class="fatex-eb-skill-settings fatex-actions__icon fa fa-cog" data-item="{{skill._id}}"></span>
+                        <span class="fatex-eb-skill-delete fatex-actions__icon fatex-u-delete fa fa-trash" data-item="{{skill._id}}"></span>
                     </div>
                 </div>
             </div>
