--- a/system/templates/apps/parts/setup/actions.hbs
+++ b/system/templates/apps/parts/setup/actions.hbs
@@ -7,7 +7,8 @@
         {{localize "FAx.Apps.Setup.Actions.Clear.Consequences"}}
     </span>
 
-    <span class="fatex-eb-clear fatex-button fatex-button--clear-all fatex-button--light{{#unless hasConsequences}} fatex-u-disabled{{/unless}}">
+    <span class="fatex-eb-clear fatex-button fatex-button--clear-all{{#unless hasConsequences}} fatex-u-disabled{{/unless}}">
+        <i class="fa fa-skull-crossbones"></i>
         <span>{{localize "FAx.Apps.Setup.Actions.Clear.Everything"}}</span>
     </span>
 
