Standardises the element used for icons across the system.

--- a/system/templates/item/parts/settings/setting-automation-skill-enable.hbs
+++ b/system/templates/item/parts/settings/setting-automation-skill-enable.hbs
@@ -55,9 +55,9 @@
             </div>
 
             <div class="fatex-actions fatex-actions--automation-item">
-                <div
+                <i
                     class="fatex-eb-remove-skill-reference fatex-actions__icon fatex-u-delete fa fa-trash fatex-actions__icon--no-hide"
-                    data-index="{{reference.index}}"></div>
+                    data-index="{{reference.index}}"></i>
             </div>
         </div>
     {{else}}
