--- a/system/templates/actor/parts/sidebar/stress.hbs
+++ b/system/templates/actor/parts/sidebar/stress.hbs
@@ -5,9 +5,9 @@
                 <h3 class="fatex-headline__text">{{stress.name}}</h3>
 
                 <div class="fatex-actions fatex-actions--headline">
-                    <span class="fatex-eb-item-sort fatex-actions__icon fatex-actions__icon--move fa fa-sort"></span>
-                    <span class="fatex-eb-stress-settings fatex-actions__icon fa fa-cog" data-item="{{stress._id}}"></span>
-                    <span class="fatex-eb-stress-delete fatex-actions__icon fatex-u-delete fa fa-trash" data-item="{{stress._id}}"></span>
+                    <i class="fatex-eb-item-sort fatex-actions__icon fatex-actions__icon--move fa fa-sort"></i>
+                    <i class="fatex-eb-stress-settings fatex-actions__icon fa fa-cog" data-item="{{stress._id}}"></i>
+                    <i class="fatex-eb-stress-delete fatex-actions__icon fatex-u-delete fa fa-trash" data-item="{{stress._id}}"></i>
                 </div>
             </header>
 
