--- a/system/templates/actor/parts/tabloid/consequences.hbs
+++ b/system/templates/actor/parts/tabloid/consequences.hbs
@@ -1,7 +1,7 @@
 <header class="fatex-headline">
     <h2 class="fatex-headline__text">{{localize "FAx.Sheet.Consequences"}}</h2>
     <div class="fatex-actions fatex-actions--headline">
-        <span class="fatex-eb-consequence-add fatex-actions__icon fa fa-plus"></span>
+        <i class="fatex-eb-consequence-add fatex-actions__icon fa fa-plus"></i>
     </div>
 </header>
 
@@ -14,9 +14,9 @@
             <div class="fatex-eb-consequence-input fatex-text-input" contenteditable="true" data-item-id="{{consequence._id}}">{{{consequence.data.value}}}</div>
 
             <div class="fatex-actions fatex-actions--item">
-                    <span class="fatex-eb-consequence-sort fatex-actions__icon fatex-actions__icon--move fa fa-sort"></span>
-                    <span class="fatex-eb-consequence-settings fatex-actions__icon fa fa-cog" data-item="{{consequence._id}}"></span>
-                    <span class="fatex-eb-consequence-delete fatex-actions__icon fatex-u-delete fa fa-trash" data-item="{{consequence._id}}"></span>
+                    <i class="fatex-eb-consequence-sort fatex-actions__icon fatex-actions__icon--move fa fa-sort"></i>
+                    <i class="fatex-eb-consequence-settings fatex-actions__icon fa fa-cog" data-item="{{consequence._id}}"></i>
+                    <i class="fatex-eb-consequence-delete fatex-actions__icon fatex-u-delete fa fa-trash" data-item="{{consequence._id}}"></i>
             </div>
 
             <label class="fatex-text-input__label">{{consequence.data.label}}</label>
