Updates the biography classes and adds a missing icon.

--- a/system/templates/apps/template-actors-picker.hbs
+++ b/system/templates/apps/template-actors-picker.hbs
@@ -81,7 +81,7 @@
             </div>
 
             <div class="fatex__template__actions">
-                <span class="fatex__template__choose fatex__item__choose" data-template="{{template._id}}">
+                <span class="fatex__template__choose fa fa-file-medical" data-template="{{template._id}}">
                     {{localize "FAx.Global.Actions.Choose"}}
                 </span>
             </div>
