--- a/src/styles/fatex.scss
+++ b/src/styles/fatex.scss
@@ -4,7 +4,7 @@
 @import "base/foundry-ui";
 @import "base/typography";
 
-@import "vendor/fontawesome";
+// @import "vendor/fontawesome";
 
 @import "components/**/*.scss";
 
