--- a/system/templates/inline-sheet/parts/stress.hbs
+++ b/system/templates/inline-sheet/parts/stress.hbs
@@ -23,7 +23,7 @@
                         <label class="fatex__inline_stress__track__item__box" data-index="{{boxIndex}}" data-item="{{stress._id}}">
                             <span class="fatex__inline_stress__track__item__label">{{box.label}}</span>
                             <input class="fatex__inline_stress__track__item__checkbox" type="checkbox"{{#if box.isChecked}} checked="checked"{{/if}}>
-                            <span class="fatex__inline_stress__track__item__icon"></span>
+                            <span class="fatex__inline_stress__track__item__icon fa fa-times"></span>
                         </label>
                     </div>
 
