--- a/system/templates/inline-sheet/parts/consequences.hbs
+++ b/system/templates/inline-sheet/parts/consequences.hbs
@@ -30,7 +30,7 @@
                     <label class="fatex__consequence__box" data-item="{{consequence._id}}">
                         <span class="fatex__consequence__box__label">{{consequence.data.icon}}</span>
                         <input class="fatex__consequence__box__checkbox" type="checkbox"{{#if consequence.data.active}} checked="checked"{{/if}}>
-                        <span class="fatex__consequence__box__icon"></span>
+                        <span class="fatex__consequence__box__icon fa fa-times"></span>
                     </label>
                 {{/if}}
             </div>
