--- a/src/styles/components/checkbox.scss
+++ b/src/styles/components/checkbox.scss
@@ -2,7 +2,6 @@
     position: relative;
     width: 30px;
     height: 30px;
-    margin: 0 8px 15px;
     font-size: 24px;
     border: 2px solid $primary-color;
     cursor: pointer;
@@ -29,5 +28,10 @@
         &:checked + .fatex-checkbox__icon {
             opacity: 1;
         }
+    }
+
+    &--filler {
+        opacity: 0;
+        pointer-events: none;
     }
 }
