Updates the consequences boxes to use the new generic checkbox styles. Makes some other changes to the consequence and aspect template, creating a new item class to account for for generic features of aspects and consequences.

--- a/src/styles/components/item/item.scss
+++ b/src/styles/components/item/item.scss
@@ -3,3 +3,11 @@
     height: 25px;
     font-size: 23px;
 }
+
+.fatex-item {
+    padding-left: $component-padding;
+
+    &--condition {
+        padding-left: 36px;
+    }
+}
