--- a/src/styles/components/checkbox.scss
+++ b/src/styles/components/checkbox.scss
@@ -12,6 +12,7 @@
         top: 0;
         transform: translate(-60%, -40%);
         font-weight: 900;
+        font-size: 24px;
         color: $primary-color;
         text-shadow: 1px 1px 1px $sheet-background;
     }
@@ -28,6 +29,16 @@
         &:checked + .fatex-checkbox__icon {
             opacity: 1;
         }
+    }
+
+    &--consequence {
+        position: absolute;
+        top: 0;
+        right: 100%;
+        width: 24px;
+        height: 24px;
+        margin-right: 5px;
+        font-size: 18px;
     }
 
     &--filler {
