--- a/system/templates/actor/parts/tabloid/aspects.hbs
+++ b/system/templates/actor/parts/tabloid/aspects.hbs
@@ -6,7 +6,7 @@
 </header>
 
 {{#each aspects as |aspect aspectIndex|}}
-    <div class="fatex-aspect fatex-eb-sortable item" data-item-id="{{aspect._id}}">
+    <div class="fatex-eb-sortable fatex-item" data-item-id="{{aspect._id}}">
         <div class="fatex-u-pos-relative">
             <div class="fatex-eb-aspect-input fatex-text-input" contenteditable="true" data-item-id="{{aspect._id}}">{{{aspect.data.value}}}</div>
 
