--- a/system/templates/item/stress-sheet.hbs
+++ b/system/templates/item/stress-sheet.hbs
@@ -13,9 +13,22 @@
             <h3 class="fatex-headline__text">{{localize "FAx.Item.Stress.Size"}}</h3>
         </header>
 
-        <div class="fatex__setting__range">
-            <input type="text" class="fatex__setting__range__value" value="{{data.size}}" />
-            <input type="range" class="fatex__setting__range__slider" name="data.size" data-dtype="Number" value="{{data.size}}" min="1" max="32"/>
+        <div class="fatex-slider">
+            <input
+                class="fatex-eb-setting-range-value fatex-slider__label"
+                type="text"
+                value="{{data.size}}"
+            />
+
+            <input
+                type="range"
+                class="fatex-eb-setting-range-slider"
+                name="data.size"
+                data-dtype="Number"
+                value="{{data.size}}"
+                min="1"
+                max="32"
+            />
         </div>
     </div>
 
