Adds legacy styles for the chat to ease migration to the new system for users.

--- a/src/styles/fatex.scss
+++ b/src/styles/fatex.scss
@@ -6,6 +6,8 @@
 
 @import "components/**/*.scss";
 
+@import "legacy/chat";
+
 @import "utils/disabled";
 @import "utils/effects";
 @import "utils/padding";
