Centres the headline text in legacy chat messages.

--- a/src/styles/legacy/chat.scss
+++ b/src/styles/legacy/chat.scss
@@ -5,6 +5,7 @@
     position: relative;
     font-weight: bold;
     text-transform: uppercase;
+    text-align: center;
     font-size: 13px;
     box-shadow: 1px 1px 1px $shadow-color;
 
