--- a/system/templates/item/skill-sheet.hbs
+++ b/system/templates/item/skill-sheet.hbs
@@ -16,13 +16,11 @@
         radioItems = availableRanks
     }}
 
-    {{!--Description is disabled for now--}}
-    {{!--{{> "systems/fatex/templates/item/parts/settings/setting-input.hbs"
-        headline = "FAx.Item.Skill.Description"
-        help = "FAx.Item.Skill.DescriptionHelp"
-        fieldName = "data.description"
-        field = data.description
-    }}--}}
+    {{> "systems/fatex/templates/item/parts/settings/setting-editor.hbs"
+      headline = "FAx.Item.Skill.Description"
+      fieldName = "data.description"
+      field = data.description
+    }}
 </div>
 
 {{> "systems/fatex/templates/item/parts/layout/item-footer.hbs"}}
