Removes excess whitespace in the navigation tabs. Removes the now defunct biography.scss document.

--- a/system/templates/actor/character.hbs
+++ b/system/templates/actor/character.hbs
@@ -30,13 +30,13 @@
                     <div class="desk__tabs fatex-u-padding-std">
                         <nav class="fatex-eb-tabs-navigation fatex-tabs-navigation">
                             <a class="fatex-tabs-navigation__item" data-tab="skills">
-                                {{localize "FAx.Sheet.Tabs.SkillsStunts"}}
+                                {{~localize "FAx.Sheet.Tabs.SkillsStunts"~}}
                             </a>
                             <a class="fatex-tabs-navigation__item" data-tab="extras">
-                                {{localize "FAx.Sheet.Tabs.Extras"}}
+                                {{~localize "FAx.Sheet.Tabs.Extras"~}}
                             </a>
                             <a class="fatex-tabs-navigation__item" data-tab="bio">
-                                {{localize "FAx.Sheet.Tabs.Bio"}}
+                                {{~localize "FAx.Sheet.Tabs.Bio"~}}
                             </a>
                         </nav>
 
