Adds missing classes to the template picker headlines which was causing a visual bug.

--- a/system/templates/apps/template-actors-picker.hbs
+++ b/system/templates/apps/template-actors-picker.hbs
@@ -15,7 +15,7 @@
 
     <div class="fatex__template">
         <header class="fatex-headline">
-            <h3 class="fatex-healing__text">{{localize "FAx.Template.Picker.Empty"}}</h3>
+            <h3 class="fatex-headline__text">{{localize "FAx.Template.Picker.Empty"}}</h3>
         </header>
 
         <style>
@@ -54,7 +54,7 @@
     {{#each templateActors as |template templateIndex|}}
         <div class="fatex__template">
             <div class="fatex-headline">
-                <span>{{ template.name }}</span>
+                <h3 class="fatex-headline__text">{{ template.name }}</h3>
             </div>
 
             <style>
