--- a/system/templates/apps/template-actors-picker.hbs
+++ b/system/templates/apps/template-actors-picker.hbs
@@ -81,9 +81,10 @@
             </div>
 
             <div class="fatex__template__actions">
-                <span class="fatex__template__choose fa fa-file-medical" data-template="{{template._id}}">
-                    {{localize "FAx.Global.Actions.Choose"}}
-                </span>
+                <div class="fatex__template__choose" data-template="{{template._id}}">
+                    <i class="fa fa-file-medical"></i>
+                    <span>{{localize "FAx.Global.Actions.Choose"}}</span>
+                </div>
             </div>
         </div>
     {{else}}
