--- a/system/templates/apps/template-actors-picker.hbs
+++ b/system/templates/apps/template-actors-picker.hbs
@@ -41,8 +41,9 @@
         </div>
 
         <div class="fatex__template__actions">
-                <span class="fatex__template__empty fatex__item__add">
-                    {{localize "FAx.Global.Actions.Create"}}
+                <span class="fatex-eb-empty-template fatex-button fatex-button--dark">
+                    <i class="fa fa-plus"></i>
+                    <span>{{localize "FAx.Global.Actions.Create"}}</span>
                 </span>
         </div>
     </div>
@@ -81,7 +82,10 @@
             </div>
 
             <div class="fatex__template__actions">
-                <div class="fatex__template__choose" data-template="{{template._id}}">
+                <div
+                    class="fatex-eb-choose-template fatex-button fatex-button--dark"
+                    data-template="{{template._id}}"
+                >
                     <i class="fa fa-file-medical"></i>
                     <span>{{localize "FAx.Global.Actions.Choose"}}</span>
                 </div>
