Fixed sorting for aspects and consequences

--- a/system/templates/actor/parts/tabs/stunts.hbs
+++ b/system/templates/actor/parts/tabs/stunts.hbs
@@ -14,7 +14,7 @@
                     <h3 class="fatex-headline__text">{{stunt.name}}</h3>
 
                     <div class="fatex-actions fatex-actions--headline">
-                        <i class="fatex-eb-item-sort fatex-actions__icon fatex-actions__icon--move fa fa-sort"></i>
+                        <i class="fatex-eb-item-sort fatex-actions__icon fa fa-sort"></i>
                         <i class="fatex-eb-stunt-settings fatex-actions__icon fa fa-cog" data-item="{{stunt._id}}"></i>
                         <i class="fatex-eb-stunt-delete fatex-actions__icon fatex-u-delete fa fa-trash" data-item="{{stunt._id}}"></i>
                         <i class="fatex-eb-item-collapse fatex-actions__icon fatex-actions__icon--no-hide fa fa-chevron-up{{#if stunt.data.collapsed}} fatex-actions__icon--reverse{{/if}}" data-item="{{stunt._id}}"></i>
