--- a/system/templates/inline-sheet/parts/consequences.hbs
+++ b/system/templates/inline-sheet/parts/consequences.hbs
@@ -15,7 +15,7 @@
                 <div class="fatex-eb-consequence-input fatex-text-input" contenteditable="true" data-item-id="{{consequence._id}}">{{{consequence.data.value}}}</div>
 
                  <div class="fatex-actions fatex-actions--item">
-                    <i class="fatex-eb-consequence-sort fatex-actions__icon fatex-actions__icon--move fa fa-sort"></i>
+                    <i class="fatex-eb-consequence-sort fatex-actions__icon fa fa-sort"></i>
                     <i class="fatex-eb-consequence-settings fatex-actions__icon fa fa-cog" data-item="{{consequence._id}}"></i>
                     <i class="fatex-eb-consequence-delete fatex-actions__icon fatex-u-delete fa fa-trash" data-item="{{consequence._id}}"></i>
                 </div>
