--- a/system/templates/actor/parts/tabloid/aspects.hbs
+++ b/system/templates/actor/parts/tabloid/aspects.hbs
@@ -11,7 +11,7 @@
             <div class="fatex-eb-aspect-input fatex-text-input" contenteditable="true" data-item-id="{{aspect._id}}">{{{aspect.data.value}}}</div>
 
             <div class="fatex-actions fatex-actions--item">
-                <i class="fatex-eb-aspect-sort fatex-actions__icon fatex-actions__icon--move fa fa-sort"></i>
+                <i class="fatex-eb-item-sort fatex-actions__icon fa fa-sort"></i>
                 <i class="fatex-eb-aspect-settings fatex-actions__icon fa fa-cog" data-item="{{aspect._id}}"></i>
                 <i class="fatex-eb-aspect-delete fatex-actions__icon fatex-u-delete fa fa-trash" data-item="{{aspect._id}}"></i>
             </div>
