--- a/system/templates/actor/parts/tabs/extras.hbs
+++ b/system/templates/actor/parts/tabs/extras.hbs
@@ -9,7 +9,7 @@
                     <h3 class="fatex-headline__text">{{extra.name}}</h3>
 
                     <div class="fatex-actions fatex-actions--headline">
-                        <i class="fatex-eb-item-sort fatex-actions__icon fatex-actions__icon--move fa fa-sort"></i>
+                        <i class="fatex-eb-item-sort fatex-actions__icon fa fa-sort"></i>
                         <i class="fatex-eb-extra-settings fatex-actions__icon fa fa-cog" data-item="{{extra._id}}"></i>
                         <i class="fatex-eb-extra-delete fatex-actions__icon fatex-u-delete fa fa-trash" data-item="{{extra._id}}"></i>
                         <i class="fatex-eb-item-collapse fatex-actions__icon fatex-actions__icon--no-hide fa fa-chevron-up{{#if extra.data.collapsed}} fatex-actions__icon--reverse{{/if}}" data-item="{{extra._id}}"></i>
