--- a/system/templates/actor/parts/tabs/skills.hbs
+++ b/system/templates/actor/parts/tabs/skills.hbs
@@ -3,7 +3,7 @@
         <h2>{{localize "FAx.Sheet.Skills"}}</h2>
 
         <div class="fatex-actions fatex-actions--section-heading">
-            <i class="fatex-eb-skill-sortrank fatex-actions__icon fatex-actions__icon--move fa fa-sort-amount-down"></i>
+            <i class="fatex-eb-skill-sortrank fatex-actions__icon fa fa-sort-amount-down"></i>
             <i class="fatex-eb-skill-add fatex-actions__icon fa fa-plus"></i>
         </div>
     </header>
@@ -39,7 +39,7 @@
                     </div>
 
                     <div class="fatex-actions fatex-actions--skill">
-                        <i class="fatex-eb-item-sort fatex-actions__icon fatex-actions__icon--move fa fa-sort"></i>
+                        <i class="fatex-eb-item-sort fatex-actions__icon fa fa-sort"></i>
                         <i class="fatex-eb-skill-settings fatex-actions__icon fa fa-cog" data-item="{{skill._id}}"></i>
                         <i class="fatex-eb-skill-delete fatex-actions__icon fatex-u-delete fa fa-trash" data-item="{{skill._id}}"></i>
                     </div>
