Added alpha-numeric sorting by name

--- a/system/templates/actor/parts/tabs/skills.hbs
+++ b/system/templates/actor/parts/tabs/skills.hbs
@@ -3,7 +3,8 @@
         <h2>{{localize "FAx.Sheet.Skills"}}</h2>
 
         <div class="fatex-actions fatex-actions--section-heading">
-            <i class="fatex-eb-skill-sortrank fatex-actions__icon fa fa-sort-amount-down"></i>
+            <i class="fatex-eb-skill-sortrank fatex-actions__icon fa fa-sort-numeric-down"></i>
+            <i class="fatex-eb-skill-sortname fatex-actions__icon fa fa-sort-alpha-down"></i>
             <i class="fatex-eb-skill-add fatex-actions__icon fa fa-plus"></i>
         </div>
     </header>
