Removes a number of duplicate form declarations for the various sheets, replacing them with a utility class.

--- a/system/templates/actor/character.hbs
+++ b/system/templates/actor/character.hbs
@@ -1,4 +1,4 @@
-<form autocomplete="off" class="{{cssClass}}">
+<form autocomplete="off" class="fatex-u-full-height {{cssClass}}">
     <div class="desk">
 
         {{!--HEADER--}}
