--- a/system/templates/inline-sheet/character.hbs
+++ b/system/templates/inline-sheet/character.hbs
@@ -1,4 +1,4 @@
-<form autocomplete="off" data-id="{{referenceID}}">
+<form autocomplete="off" class="fatex-u-full-height" data-id="{{referenceID}}">
     <div class="fatex__inline_sheet{{#if defeated}} fatex__inline_sheet--defeated{{/if}}{{#if hidden}} fatex__inline_sheet--hidden{{/if}}">
         <h2 class="fatex__inline_sheet__headline fatex-headline">
             <img alt="{{actor.name}}" data-edit="img" src="{{actor.img}}" />
