--- a/system/templates/apps/parts/layout/app-header.hbs
+++ b/system/templates/apps/parts/layout/app-header.hbs
@@ -1,4 +1,4 @@
-<form autocomplete="off" class="{{cssClass}}">
+<form autocomplete="off" class="fatex-u-full-height {{cssClass}}">
     <div class="desk">
 
         {{!--HEADER--}}
